# TreeNet

./: README.md  densenet169.py  file-oprtations.py  file_operations.py  nn_architecture.py  setup.cfg
catboost_info/: learn_error.tsv
kvasir_test/: test1.py
kvasirv1/: dev_Haralick_features_14.csv  dev_Haralick_features_6.csv  dev_color_layout.csv  dev_jcd.csv  dev_lbp_1.csv  dev_lbp_2.csv  dev_lbp_3.csv  dev_lbp_4.csv  dev_lbp_5.csv  dev_tamura.csv  val_Haralick_features_14.csv  val_Haralick_features_6.csv  val_color_layout.csv  val_edge_histogram.csv  val_jcd.csv  val_lbp_1.csv  val_lbp_2.csv  val_lbp_3.csv  val_lbp_4.csv  val_lbp_5.csv  val_tamura.csv
tests/: test_model.py
treenet/: __init__.py  model.py
