[metadata]
name = dtreenetwork
version = 0.1.1
description = A simple experimental ML model
long_description = file: README.md
long_description_content_type = text/markdown
author = Zeshan Khan
author_email = your.email@example.com
license = MIT
url = https://github.com/zeshanalvi/treenet

[options]
packages = find:
python_requires = >=3.8
install_requires =
    numpy>=1.20