[metadata]
name = dtreenetwork
version = 1.1.1
description = A Layered Decision Tree Based Model for Classification tasks
long_description = file: README.md
long_description_content_type = text/markdown
author = Zeshan Khan
author_email = zeshankhanalvi@gmail.com
license = MIT
url = https://github.com/zeshanalvi/treenet

[options]
packages = find:
python_requires = >=3.8
install_requires =
    numpy>=1.20